# pnc-engine

./: CMakeLists.txt  TODOs.txt
assets/: assets.lib
assets/characters/: ch2.conf
assets/images/: chef_full.psd
assets/rooms/: corridor_studio.conf  corridor_studio.navmesh  studio.conf  studio.navmesh  studio_old.conf  svg_parser.py  test.conf  test.navmesh
characters/: ch2.conf  ch4.conf  chef.conf
configs/: game.conf  test_room.conf
rooms/: studio.conf  studio.navmesh  studio_polys.xml  svg_parser.py
src/: Cursor.cpp  Cursor.h  Game.cpp  Game.h  Item.cpp  Item.h  Pathfinder.cpp  Pathfinder.h  Player.cpp  Player.h  Room.cpp  Room.h  hud.cpp  hud.h  main.cpp
